Fix border-overflow of editor sections

--- a/ui/src/main/web/styles/planning/editor/sectionV2.module.css
+++ b/ui/src/main/web/styles/planning/editor/sectionV2.module.css
@@ -43,3 +43,8 @@
   );
   background: #02051c;
 }
+
+/* This exists to ensure that child elements don't overflow the contents border */
+.inner {
+  overflow: hidden;
+}
